Change label text from 'Qualidade Cinema' to 'Cinema'

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                         </label>
                         <label class="flex items-center space-x-2 text-sm font-medium bg-black p-2 rounded-lg col-span-2 sm:col-span-1">
                             <input type="checkbox" id="seal-cinema-quality" class="h-4 w-4 text-red-500 bg-black border-gray-300 rounded"/>
-                            <span>Qualidade Cinema</span>
+                            <span>Cinema</span>
                         </label>
                     </div>
                 </div>
