--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <div id="cinerave-title" class="text-2xl font-black text-white tracking-widest">
-            CINERAVE
+            CINERAVE+
         </div>
         
         <button id="profileButton" onclick="showProfileModal()" class="text-white text-xl p-2 rounded-full hover:bg-white/10 transition duration-150">
@@ -272,7 +272,7 @@
                 <hr class="border-white/10 my-4">
 
                 <button onclick="showStoreModal()" class="text-white hover:bg-white/10 p-3 rounded-lg transition duration-150 w-full text-left font-semibold tracking-wide flex items-center text-yellow-500 font-bold">
-                    <i class="fas fa-store mr-3 w-5 text-center"></i> LOJA
+                    <i class="fas fa-store mr-3 w-5 text-center"></i> PREMIUM
                 </button>
 
                 <button id="nav-premium-catalog" onclick="switchTab('premiumPage', 'drive')" class="text-white hover:bg-white/10 p-3 rounded-lg transition duration-150 w-full text-left font-semibold tracking-wide flex items-center hidden text-yellow-300">
@@ -296,7 +296,7 @@
                 <hr class="border-white/10 my-4">
 
                 <button onclick="showAdminPasswordModal()" class="text-white hover:bg-white/10 p-3 rounded-lg transition duration-150 w-full text-left font-semibold tracking-wide flex items-center">
-                    <i class="fas fa-lock mr-3 w-5 text-center"></i> ADMIN
+                    <i class="fas fa-lock mr-3 w-5 text-center"></i> ACESSO RESTRITO 
                 </button>
 
                 <button id="auth-button" onclick="handleAuthClick()" class="text-white hover:bg-white/10 p-3 rounded-lg transition duration-150 w-full text-left font-semibold tracking-wide flex items-center">
@@ -4201,7 +4201,7 @@
             const fourKContent = movies.filter(c => c.seals?.['4k']);
             if (fourKContent.length > 0) {
                  carouselsContainer.insertAdjacentHTML('beforeend', '<div id="4k-carousel"></div>');
-                 renderCarousel(fourKContent, `🎥 Filmes em 4K${window.isPremium ? '' : ' (Premium)'}`, '4k-carousel');
+                 renderCarousel(fourKContent, ` Filmes em 4K${window.isPremium ? '' : ' (Premium)'}`, '4k-carousel');
             }
 
 
